# My-Linear-Algebra

./: CMakeLists.txt  CMakePresets.json  Gauss_Elimination.cpp  Makefile  MyLinearAlgebra.ui  README.md  determinant-Leibniz.cpp  identity.cpp  inverse.cpp  io_matrix.cpp  io_matrix_json.cpp  lu_decomposition.cpp  main.cpp  mainwindow.cpp  mainwindow.h  matrix_options_base.h  multiply.cpp  permutation.cpp  transpose.cpp
resources/: Makefile.old
scripts/: setup.iss
src/: determinant-Gauss.cpp  determinant-Leibniz.cpp  elimination.cpp  io_matrix.cpp  linear_equation.cpp  loaded_matrix.h  main.cpp  matrix_options_base.h  permutation.cpp  ui_MyLinearAlgebra.h
